--- a/.gitignore
+++ b/.gitignore
@@ -128,6 +128,9 @@ dmypy.json
 # Pyre type checker
 .pyre/
 
+# database files
+*.db
+
  Only for Development only
  **/migrations/**
  !**/migrations
