--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ idna==2.10
 Pillow==8.0.1
 psycopg2==2.8.6
 psycopg2-binary==2.8.6
+python-decouple==3.4
 pytz==2020.4
 requests==2.25.0
 sqlparse==0.4.1
